# dats

./: .dockerignore  .editorconfig  .env  .gitignore  .pre-commit-config.yaml  .ruff.toml  404.html  AGENTS.md  CNAME  DATSIMPORT.md  Dockerfile_backend  Dockerfile_backend_api  Dockerfile_celery_archive_worker  Dockerfile_celery_text_worker  Dockerfile_celery_worker  INSTRUCTIONS.md  LICENSE  README.md  analysis.py  dats.code-workspace  docker-compose.yml  docker_build.sh  environment.yml  index.html  mkdocs.yml  package-lock.json  pyproject.toml  requirements.txt  ruff.toml  services_docker-compose.yml  sitemap.xml
airflow/: .dockerignore  Dockerfile  pyproject.toml
airflow/src/config/: airflow.cfg
airflow/src/dags/: data_preprocessing_dag.py  text_processing_dag.py  tutorial.py  tutorial2.py  tutorial_taskflow.py
backend/: .dockerignore  .env  .env.dev  .env.example  .env.in_container.example  .env.testing.example  .gitignore  Dockerfile  Dockerfile_backend_api  Dockerfile_backend_deps  Dockerfile_celery_archive_worker  Dockerfile_celery_image_worker  Dockerfile_celery_simsearch_worker  Dockerfile_celery_text_worker  Makefile  README.md  _activate_current_env.sh  _dockerfile_shell.sh  _entrypoint.sh  docker-compose.yml  docker_build.sh  environment.yml  ltcpu1_tunnels.sh  pyproject.toml  requirements.txt  update_version.py
backend/.github/prompts/: add-config.prompt.md
backend/configs/: base.yaml  default.yaml  development.yaml  production.yaml  test.yaml  version.yaml
backend/lint/: check_core.py  check_crud.py  check_dtos.py  check_endpoints.py  check_repos.py  check_services.py
backend/src/: alembic.ini  backend_api_entrypoint.sh  celery_archive_worker_entrypoint.sh  celery_audio_worker_entrypoint.sh  celery_background_jobs_worker_entrypoint.sh  celery_heavy_jobs_worker_entrypoint.sh  celery_image_worker_entrypoint.sh  celery_simsearch_worker_entrypoint.sh  celery_text_worker_entrypoint.sh  celery_video_worker_entrypoint.sh  config.py  config_schema.py  main.py  nano.3535870.save  pytest.ini  rq_worker_entrypoint.sh  run_migrations.py  run_tests.sh  startup.py  test_es.sh  test_ray.sh  wipe_database.py  worker.py
backend/src/alembic/: README  env.py
backend/src/api/: dependencies.py  util.py  validation.py
backend/src/common/: crud_enum.py  dependencies.py  doc_type.py  exception_handler.py  gpu_utils.py  job_type.py  languages_enum.py  meta_type.py  sdoc_status_enum.py
backend/src/configs/: default.yaml  default_localhost_dev.yaml  default_memo_index_mapping.json  default_sdoc_index_mapping.json  development.yaml  production.yaml  version.yaml
backend/src/migration/: migrate.py  run_migrations.py
backend/src/migrations/: alembic.ini  run_migrations.py
backend/src/preprocessing/: prepro_dto.py  prepro_endpoint.py  preprocessing_job_crud.py  preprocessing_job_dto.py  preprocessing_job_orm.py  preprocessing_job_payload_crud.py  preprocessing_job_payload_dto.py  preprocessing_job_payload_orm.py  preprocessing_service.py
backend/src/ray/: .env  Dockerfile  dbert.py  docker-compose.yml  entrypoint.sh  jobs.py  spacy_ray.py  startup.sh  whisper_ray.py
backend/src/ray_model_worker/: config_cpu.yaml  config_gpu.yaml  generate_ray_model_worker_specs.py  ray_config.py  ray_model_worker_entrypoint.sh  spec.yaml
backend/src/repos/: docling_repo.py  elasticsearch_repo.py  filesystem_repo.py  llm_repo.py  mail_repo.py  ollama_repo.py  ray_repo.py  redis_repo.py
backend/src/systems/: events.py
backend/src/test/: conftest.py  test_authz_user.py  test_validate.py
backend/src/util/: image_utils.py  string_builder.py
backend/src/utils/: color_utils.py  gpu_utils.py  import_utils.py
backend/test/: conftest.py  test_authz_user.py  test_validate.py
backend/test/endpoints/: test_code_endpoint.py  test_docprocessing_endpoint.py  test_folder_endpoint.py  test_memo_endpoint.py  test_project_endpoints.py  test_project_metadata_endpoint.py  test_sentence_annotation_endpoint.py  test_source_document_endpoint.py  test_source_document_metadata_endpoint.py  test_span_annotation_endpoint.py  test_tag_endpoint.py  test_user_endpoint.py
backend/test/factories/: bbox_annotation_factory.py  code_factory.py  folder_factory.py  memo_factory.py  project_factory.py  project_metadata_factory.py  sentence_annotation_factory.py  source_document_factory.py  source_document_metadata_factory.py  span_annotation_factory.py  tag_factory.py  user_factory.py
benchmarks/: .gitignore  README.md  pyproject.toml
benchmarks/configs/: config.yaml
benchmarks/configs/backend/: vllm.yaml
benchmarks/configs/dataset/: 20newsgroups.yaml  bbc-coarse.yaml  bbc-fine.yaml  coarsediscourse.yaml  csabstruct.yaml  daily-dialog.yaml  emotion-lines.yaml  fewnerd-coarse.yaml  fewnerd-fine.yaml  german-ler-coarse.yaml  german-ler-fine.yaml  german-quotations-direct.yaml  germanquad.yaml  imdb-coarse.yaml  imdb-multi-label.yaml  muc4.yaml  pubmed200k.yaml  squad.yaml  squad2.yaml  tagesschau-coarse.yaml  tagesschau-fine.yaml
benchmarks/configs/experiment/: 20newsgroups_v1_zeroshot.yaml  document_classification_20newsgroups_coarse_v1.yaml  document_classification_bbc_coarse_v1.yaml  document_classification_bbc_fine_v1.yaml  document_classification_imdb_coarse_v1.yaml  document_classification_imdb_multi_label_v1.yaml  document_classification_tagesschau_coarse_v1.yaml  document_classification_tagesschau_fine_v1.yaml  extractive_qa_germanquad_v1.yaml  extractive_qa_squad1_v1.yaml  extractive_qa_squad2_v1.yaml  sequential_sentence_classification_coarsediscourse_v1.yaml  sequential_sentence_classification_csabstruct_v1.yaml  sequential_sentence_classification_daily_dialog_v1.yaml  sequential_sentence_classification_emotion_lines_v1.yaml  (+7 more)
benchmarks/docker/: .env.example  README.md  docker-compose.yml
benchmarks/src/: run_experiment.py
ray/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
ray/configs/: ray_config.yaml
ray/src/: check_health.py  config.py  generate_specs.py  install_spacy_models.sh  ray_entrypoint.sh  ray_entrypoint_dev.sh  utils.py
ray/src/apps/: clip.py  (+9 more)
(+5850 files in other folders)
