[tool.poetry]
name = "dwts_backend"
version = "0.1.0"
description = ""
authors = ["floschne <florian.schneider-1@uni-hamburg.de>"]

[tool.poetry.dependencies]
python = "^3.9.7"
spacy = "^3.2.3"
click = "8.0.4"
fastapi = "^0.75.0"
SQLAlchemy = "^1.4.32"
SQLAlchemy-Utils = "^0.38.2"
python-multipart = "^0.0.5"
frozendict = "^2.3.0"
pydantic = {version = "1.8.2", extras = ["email"]}
psycopg2 = "^2.9.3"
redis = "^4.2.0"
celery = "^5.2.3"
loguru = "^0.6.0"
omegaconf = "^2.1.1"
uvicorn = "^0.17.6"
langdetect = "^1.0.9"
python-jose = "^3.3.0"
passlib = "^1.7.4"
Pillow = "^9.1.0"
transformers = "^4.18.0"
torch = {version = "^1.11.0", platform = "linux"}
timm = {version = "^0.5.4", platform = "linux"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

