[project]
name = "dats"
authors = [
  {name = "Tim Fischer", email = "tim.fischer@uni-hamburg.de"},
  {name = "Florian Schneider", email = "florian.schneider-1@uni-hamburg.de"},
  {name = "Fynn Petersen-Frey", email = "fynn.petersen-frey@uni-hamburg.de"},
  {name = "Chris Biemann", email = "chris.biemann@uni-hamburg.de"},
]
maintainers = [
  {name = "Tim Fischer", email = "tim.fischer@uni-hamburg.de"},
]
version = "1.4.2"
description = "DATS is a machine-learning powered web application for multi-modal discourse analysis. It provides tools for the typical workflow of a discsourse analysis project including data collection, data management, exploration, annotation, qualitative & quantitative analysis, interpratation and reflection."
readme = "README.md"
license="Apache-2.0"
license-files = ["LICENSE"]
dependencies = []

[project.urls]
Homepage = "https://www.hcds.uni-hamburg.de/de/research/demos/dats.html"
Documentation = "https://github.com/uhh-lt/dats/wiki"
Repository = "https://github.com/uhh-lt/dats.git"
Issues = "https://github.com/uhh-lt/dats/issues"

# TODO [project.scripts] -> provide the scripts in bin

[tool.ruff]
src = ["backend/src"]

[tool.ruff.lint]

# I: isort-compatible import sorting
# W291: Trailing whitespace
# W292: Add newline to end of file
# W293: Blank line contains whitespace
extend-select = ["I", "W292", "W291", "W293"]

[tool.pyright]
include = ["backend/src"]
exclude = ["**/__pycache__",
    "backend/src/dev_notebooks",
]
extraPaths = ["backend/src"]
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
