[project]
name = "dats-backend"
authors = [
  {name = "Tim Fischer", email = "tim.fischer@uni-hamburg.de"},
  {name = "Florian Schneider", email = "florian.schneider-1@uni-hamburg.de"},
  {name = "Fynn Petersen-Frey", email = "fynn.petersen-frey@uni-hamburg.de"},
  {name = "Chris Biemann", email = "chris.biemann@uni-hamburg.de"},
]
maintainers = [
  {name = "Tim Fischer", email = "tim.fischer@uni-hamburg.de"},
]
version = "1.7.1"
requires-python = "==3.11.*"
description = "DATS is a machine-learning powered web application for multi-modal discourse analysis. It provides tools for the typical workflow of a discsourse analysis project including data collection, data management, exploration, annotation, qualitative & quantitative analysis, interpratation and reflection."
readme = "../README.md"
license="Apache-2.0"
license-files = ["../LICENSE"]
dependencies = [
    "alembic==1.12.1",
    "anyio==3.7.1",
    "beautifulsoup4==4.12.3",
    "black==23.9.1",
    "blinker==1.9.0",
    "cssselect==1.2.0",
    "debugpy==1.8.0",
    "elasticsearch==7.17",
    "email-validator==2.2.0",
    "fastapi==0.115.12",
    "fastapi-mail==1.4.1",
    "ffmpeg-python==0.2.0",
    "frozendict==2.3",
    "ftfy==6.1",
    "hdbscan==0.8.40",
    "httpx==0.28.1",
    "isort==5.12.0",
    "itsdangerous==2.2.0",
    "loguru==0.6",
    "lxml-html-clean>=0.4.1",
    "mammoth==1.6.0",
    "matplotlib==3.7.1",
    "multiprocess==0.70.15",
    "networkx==3.2.1",
    "ollama==0.4.7",
    "omegaconf==2.3.0",
    "pandas==2.1.4",
    "passlib==1.7",
    "pillow==10.0.0",
    "pip==23.3.2",
    "pre-commit==3.3.3",
    "psycopg2==2.9.10",
    "pydantic==2.10.5",
    "pydantic-core==2.27.2",
    "pymupdf==1.23.4",
    "pyright==1.1.385",
    "pytest==7.4.3",
    "pytest-order==1.2.1",
    "python-jose==3.3",
    "python-magic==0.4.27",
    "python-multipart==0.0.20",
    "readability-lxml==0.8.1",
    "redis==4.3",
    "rope==1.9.0",
    "rq>=2.4.1",
    "scikit-learn==1.3.2",
    "scrapy==2.10.0",
    "scrapy-playwright==0.0.31",
    "scrapy-selenium==0.0.7",
    "sqlalchemy==2.0.25",
    "sqlalchemy-utils==0.41.1",
    "srsly==2.4.8",
    "starlette==0.46.1",
    "tenacity==9.1.2",
    "tqdm==4.66.3",
    "twisted==22.10.0",
    "ujson>=5.10.0",
    "umap-learn==0.5.5",
    "uvicorn==0.23.2",
    "weaviate-client==4.14.4",
    "webdriver-manager==4.0.1",
    "yake==0.4.8",
]

[dependency-groups]
dev = [
    "accelerate==1.5.2",
    "bitsandbytes==0.45.4",
    "ctranslate2==4.5.0",
    "cupy-cuda11x==13.4.1",
    "datasets==3.5.0",
    "docling==2.36.1",
    "faster-whisper==1.1.1",
    "fasttext==0.9.3",
    "ffmpeg-python==0.2.0",
    "huggingface-hub==0.29.3",
    "ipykernel==6.29.5",
    "ipywidgets>=8.1.7",
    "lightning==2.5.1",
    "maverick-coref-de==1.0.5",
    "omegaconf==2.3.0",
    "online-triplet-loss==0.0.6",
    "peft==0.15.1",
    "python-multipart==0.0.20",
    "pytorch-crf==0.7.2",
    "quotect==1.1.5",
    "ray==2.44.1",
    "sentence-transformers==4.1.0",
    "setfit==1.1.2",
    "spacy==3.8.4",
    "spacy-curated-transformers==0.3.0",
    "spacy-transformers==1.3.9",
    "timm==1.0.15",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "transformers==4.49.0",
    "umap-learn==0.5.5",
]

[project.urls]
Homepage = "https://www.hcds.uni-hamburg.de/de/research/demos/dats.html"
Documentation = "https://github.com/uhh-lt/dats/wiki"
Repository = "https://github.com/uhh-lt/dats.git"
Issues = "https://github.com/uhh-lt/dats/issues"

[tool.ruff]
extend = "../ruff.toml"
src = ["src"]

[tool.ruff.lint.isort]
known-first-party = [
    "common",
    "core",
    "config",
    "migrations",
    "modules",
    "preprocessing",
    "ray_model_worker",
    "repos",
    "systems",
    "utils"
]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__",
    "src/dev_notebooks",
]
extraPaths = ["src"]
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportUnreachable = true

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
    "-ra -q",
]
testpaths = [
    "test"
]
