[project]
name = "dats-llm-benchmarks"
version = "0.1.0"
description = "LLM benchmarking framework for NLP tasks in DATS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "evaluate>=0.4.2",
    "hydra-core>=1.3.2",
    "jinja2>=3.1.4",
    "mlflow>=2.14.3",
    "openai>=1.50.2",
    "pandas>=2.2.3",
    "pydantic>=2.9.2",
    "pyright==1.1.385",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "seqeval>=1.2.2",
]

[tool.ruff]
extend = "../ruff.toml"
src = ["src"]

[tool.ruff.lint.isort]
known-first-party = [
    "core",
    "evaluation",
    "prompts",
    "schemas",
]

[tool.pyright]
include = ["src", "test"]
exclude = [
    "**/__pycache__",
    "**/.venv",
]
extraPaths = ["src"]
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportUnreachable = true
