[project]
name = "dats-ray"
authors = [
  {name = "Tim Fischer", email = "tim.fischer@uni-hamburg.de"},
  {name = "Florian Schneider", email = "florian.schneider-1@uni-hamburg.de"},
  {name = "Fynn Petersen-Frey", email = "fynn.petersen-frey@uni-hamburg.de"},
  {name = "Chris Biemann", email = "chris.biemann@uni-hamburg.de"},
]
maintainers = [
  {name = "Tim Fischer", email = "tim.fischer@uni-hamburg.de"},
]
version = "1.8.0"
requires-python = "==3.11.*"
description = "DATS Ray is a service offering API to access various machine-learning models that power the Discourse Analysis Tool Suite."
readme = "../README.md"
license="Apache-2.0"
license-files = ["../LICENSE"]
dependencies = [
    "accelerate==1.5.2",
    "bitsandbytes==0.45.4",
    "ctranslate2==4.5.0",
    "cupy-cuda12x==13.6.0",
    "docling==2.36.1",
    "faster-whisper==1.1.1",
    "fasttext-numpy2==0.10.4",
    "ffmpeg-python==0.2.0",
    "flash-attn==2.7.4.post1",
    "huggingface_hub==0.29.3",
    "maverick-coref-de==1.0.6",
    "omegaconf==2.3.0",
    "quotect==1.1.5",
    "ray[serve]==2.44.1",
    "sentence-transformers==4.1.0",
    "spacy==3.8.4",
    "spacy-curated-transformers==0.3.0",
    "spacy-transformers==1.3.9",
    "timm==1.0.15",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "transformers==4.49.0",
]

[tool.uv]
no-build-isolation-package = ['flash-attn']

[project.urls]
Homepage = "https://www.hcds.uni-hamburg.de/de/research/demos/dats.html"
Documentation = "https://github.com/uhh-lt/dats/wiki"
Repository = "https://github.com/uhh-lt/dats.git"
Issues = "https://github.com/uhh-lt/dats/issues"

[tool.ruff]
extend = "../ruff.toml"
src = ["src"]

[tool.ruff.lint.isort]
known-first-party = [
    "apps",
    "dto",
    "models",
    "config",
    "utils"
]

[tool.pyright]
include = ["src", "test"]
exclude = ["**/__pycache__", "**/.venv"]
extraPaths = ["src"]
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportUnreachable = true

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
    "-ra -q",
]
testpaths = [
    "test"
]
